Remove extraneous conversion to float [Bug #18236]